--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=dbcatalog
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba2
+spring.datasource.url=jdbc:mysql://localhost:3306/juanpablo
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
